--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile('org.apache.tomcat:tomcat-juli:8.5.15')
     compile("com.google.http-client:google-http-client-jackson:1.22.0")
     compile("com.google.oauth-client:google-oauth-client:1.22.0")
+    compile("com.auth0:java-jwt:3.2.0")
 
 
     compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
