--- a/circle.yml
+++ b/circle.yml
@@ -24,10 +24,10 @@ deployment:
       - sudo /opt/google-cloud-sdk/bin/gcloud config set container/cluster $CLUSTER_NAME
       - sudo /opt/google-cloud-sdk/bin/gcloud config set compute/zone ${CLOUDSDK_COMPUTE_ZONE}
       - sudo /opt/google-cloud-sdk/bin/gcloud container clusters get-credentials $CLUSTER_NAME
-      - cp docker/nginx/nginx.conf dist
-      - cp docker/nginx/Dockerfile dist
-      - docker build -t eu.gcr.io/${PROJECT_NAME}/${APP_NAME}:$CIRCLE_SHA1 dist
+      - docker build -t eu.gcr.io/${PROJECT_NAME}/${APP_NAME}:$CIRCLE_SHA1 build/libs
       - sudo /opt/google-cloud-sdk/bin/gcloud docker -- push eu.gcr.io/${PROJECT_NAME}/${APP_NAME}:$CIRCLE_SHA1
       - sudo chown -R ubuntu:ubuntu /home/ubuntu/.kube
       - sudo chown -R $USER /home/ubuntu/.config
-      - kubectl patch deployment ${APP_NAME} -p '{"spec":{"template":{"spec":{"containers":[{"name":"'${APP_NAME}'", "image":"eu.gcr.io/'${PROJECT_NAME}/${APP_NAME}:${CIRCLE_SHA1}'"}]}}}}'
+      - sed s/%VERSION%/$CIRCLE_SHA1/g k8s-deployment.yml > k8s-deployment-latest.yml
+      - kubectl apply -f k8s-deployment-latest.yml
+      - kubectl apply -f k8s-service.yml
