--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ ext {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.3.1.RELEASE'
     compile('org.apache.tomcat:tomcat-juli:8.5.15')
     compile("com.google.http-client:google-http-client-jackson:1.22.0")
     compile("com.google.oauth-client:google-oauth-client:1.22.0")
