--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ ext {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.3.1.RELEASE'
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+
     compile('org.apache.tomcat:tomcat-juli:8.5.15')
     compile("com.google.http-client:google-http-client-jackson:1.22.0")
     compile("com.google.oauth-client:google-oauth-client:1.22.0")
