--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: kolov/aws-cli:1.1
+      - image: kolov/java
         user: root
     steps:
       - checkout
